2005-05-18 David Inglis
	Fixed bug 39581 & part of 46746
	
	* AbstractCLaunchDelegate.java
	* LocalAttachLauchDelegate.java
	* LocalRunLaunchDelegate.java
	* LocalAttachLaunchDelegate.java
	* LocalAttachLaunchConfigurationTabGroup.java
	* LocalRunLaunchConfigurationTabGroup.java
	+ CMainAttachTab.java
	* CMainTab.java
	
	
2005-05-09 Mikhail Khodjaiants
	Bug 80175: Replace the CDT source lookup by the source lookup provided by Eclipse platform.
	Removed the old source lookup related classes and interfaces.
	* CoreFileLaunchConfigurationTabGroup.java
	* LaunchMessages.properties
	* LocalAttachLaunchConfigurationTabGroup.java
	* LocalRunLaunchConfigurationTabGroup.java
	- CSourceLookupTab.java

2005-04-21 Mikhail Khodjaiants
	Bug 80175: Replace the CDT source lookup by the source lookup provided by Eclipse platform.
	* CoreFileLaunchConfigurationTabGroup.java
	* LocalAttachLaunchConfigurationTabGroup.java
	* LocalRunLaunchConfigurationTabGroup.java
	* plugin.xml

2005-04-07 David Daoust
	Update icons
	
2005-02-24 Alain Magloire
	Fix for PR 86443

	* src/org/eclipse/cdt/launch/internal/ui/LaunchMessages.properties
	* src/org/eclipse/cdt/launch/ui/CArgumentsTab.java

2005-02-03 David Inglis
	Fixed PR#84361
	
	* src/org/elipse/cdt/launch/internal/ui/AbstractCDebuggerTab.java
	* src/org/eclipse/cdt/launch/ui/CoreFileDebuggerTab.java
	
2005-01-19 Alain Magloire
	PR 82930
	* src/org/eclipse/cdt/launch/internal/CPropertyTester.java

2004-12-20 Alain Magloire

	PR 81321
	* src/org/eclipse/cdt/launch/internal/CPropertyTester.java

2004-12-06 Mikhail Khodjaiants
	The last character is missing in the launch configuration name generated 
	from the binary file name.
	* src/org/eclipse/cdt/launch/ui/CMainTab.java

2004-11-17 David Inglis

	Change to use IBinaryObject instead of IBinayExecutable

	* src/org/eclipse/cdt/launch/AbstractCLaunchDelegate.java
	* src/org/eclipse/cdt/launch/internal/CoreFileLaunchDelegate.java