@@ -6,7 +6,8 @@
 # http://www.eclipse.org/legal/cpl-v10.html
 # 
 # Contributors: 
-# QNX Software Systems - Initial API and implementation
+# 		QNX Software Systems - Initial API and implementation
+# 		Monta Vista - Joanne Woo - Bug 87556
 #######################################################################
 
 AbstractCLaunchDelegate.Debugger_not_installed=CDT Debugger not installed
@@ -43,6 +44,9 @@ CoreFileLaunchDelegate.Launching_postmortem_debugger=Launching postmortem debugg
 CoreFileLaunchDelegate.No_Corefile_selected=No Corefile selected
 CoreFileLaunchDelegate.No_Shell_available_in_Launch=No Shell available in Launch
 CoreFileLaunchDelegate.Select_Corefile=Select Corefile
+CoreFileLaunchDelegate.Corefile_not_accessible=Core file is not accessible.
+CoreFileLaunchDelegate.Corefile_not_readable=Core file does not exist or is not readable.
+CoreFileLaunchDelegate.postmortem_debugging_failed=Post-mortem debugging failed
 
 CApplicationLaunchShortcut.Application_Launcher=Application Launcher
 CApplicationLaunchShortcut.ChooseConfigToDebug=Choose a debug configuration to debug
